[build-system]
requires = ["maturin>=1.4,<2"]
build-backend = "maturin"

[project]
name = "vulnvault"
version = "0.1.0"
requires-python = ">=3.10"
description = "A localized version of NVD's information on CPEs, CVEs, etc."
readme = "README.md"
dependencies = [
    "pymongo~=4.9.1",
    "requests~=2.32.2",
    "nltk~=3.9.1",
    "rapidfuzz~=3.9.3"
]

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "rustyVault"